--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@ section {
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1 style="text-align:right;">Kim Yoojung</h1>
+      <h1 style="text-align:center;">Kim Yoojung</h1>
       <p>passionate and versatile creative</p>
     </div>
   </section><!-- End Hero -->
