--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@ section {
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1 style="text-align:center;">Kim Yoojung</h1>
-      <p>passionate and versatile creative</p>
+      <p style="text-align:center;">passionate and versatile creative</p>
     </div>
   </section><!-- End Hero -->
 
